js/js.translator/testData/incremental/invalidation/renameModuleWithCrossModuleInliner/lib1/l1.5.kt
inline fun foo() = 5
